Issue #3205: Correct client quote spacing on small screens

--- a/_assets/styles/scss/05-regions/_client-quote.scss
+++ b/_assets/styles/scss/05-regions/_client-quote.scss
@@ -95,6 +95,7 @@ The class `region--client-quote--dark` can be included for a dark teal backgroun
 
     .region--client-quote__quote__text {
       font-size: 1.44em;
+      margin-bottom: 0;
       max-width: 600px;
 
       @include grid-media($medium-screen-up) {
